se agregan styles a header y agregan algunas propiedades en html

--- a/index.html
+++ b/index.html
@@ -3,20 +3,29 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css">
     <title>MarketPlace</title>
   </head>
   <body>
-    <header><img src="" alt="" />
+    <header>
+      <img class="logo" src="img/logo.png" alt="" />
         <div class="navbar">
             <div class="menu-hamburguer">
                 <span></span>
                 <span></span>
                 <span></span>
             </div>
-        <img src="" alt="image-lupa">
-        <input type="text" placeholder="Canva">
-        <img src="" alt="image-login">
-        <img src="" alt="shop-little-car">
+            <div class="container_input">
+              <img class="icon_lupa" src="img/icon_lupa.png" alt="image-lupa">
+              <input class="input_search" type="text" placeholder=" ">
+            </div>
+        <a href="">
+          <img class="icon_user" src="img/icon_user.png" alt="image-login">
+        </a>
+        <a href="">
+          <img class="icon_shopping_cart" src="img/icon_shopping_cart.png" alt="shop-little-car">
+        </a>
+      </div>
     </header>
       <main>
         <h1>Mi Tienda</h1>
