--- a/index.html
+++ b/index.html
@@ -1,53 +1,105 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css">
-    <title>MarketPlace</title>
-  </head>
-  <body>
-    <header>
-      <img class="logo" src="img/logo.png" alt="" />
-        <div class="navbar">
-            <div class="menu-hamburguer">
-                <span></span>
-                <span></span>
-                <span></span>
-            </div>
-            <div class="container_input">
-              <img class="icon_lupa" src="img/icon_lupa.png" alt="image-lupa">
-              <input class="input_search" type="text" placeholder=" ">
-            </div>
-        <a href="">
-          <img class="icon_user" src="img/icon_user.png" alt="image-login">
-        </a>
-        <a href="">
-          <img class="icon_shopping_cart" src="img/icon_shopping_cart.png" alt="shop-little-car">
-        </a>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap" rel="stylesheet">
+  <title>Gaming Galaxy</title>
+</head>
+
+<body>
+  <header>
+    <img class="logo" src="img/logo.png" alt="" />
+    <div class="navbar">
+      <div class="menu-hamburguer">
+        <span></span>
+        <span></span>
+        <span></span>
       </div>
-    </header>
-      <main>
-        <h1>Mi Tienda</h1>
-        <button class="container-buttons">
-            <button></button>
-            <button></button>
-            <button></button>
-            <button></button>
-        </button>
-        <div class="container-cards">
-            <div>
-                <img src="" alt="">
-                <h2 class="titles"></h2>
-            </div>
-        </div>
-      </main>
-    <footer>
-        <div class="container-icons">
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
-        </div>
-    </footer>
-  </body>
+      <div class="container_input">
+        <img class="icon_lupa" src="img/icon_lupa.png" alt="image-lupa">
+        <input class="input_search" type="text" placeholder=" ">
+      </div>
+      <a href="">
+        <img class="icon_user" src="img/icon_user.png" alt="image-login">
+      </a>
+      <a href="">
+        <img class="icon_shopping_cart" src="img/icon_shopping_cart.png" alt="shop-little-car">
+      </a>
+    </div>
+  </header>
+  <main>
+    <img class="separator" src="img/separator.png" alt="">
+    <h1>Gaming Galaxy </h1>
+    <img class="separator" src="img/separator.png" alt="">
+    <div class="container-buttons">
+      <button>Electronics</button>
+      <button>Jewerely</button>
+      <button>Mens</button>
+      <button>Women</button>
+    </div>
+    <div class="container-cards">
+      <div class="container_product">
+        <img src="img/ej_product.jpg" alt="">
+        <h2 class="titles">Gamer Chair</h2>
+      </div>
+      <div class="container_product">
+        <img src="img/ej_product.jpg" alt="">
+        <h2 class="titles">Gamer Chair</h2>
+      </div>
+      <div class="container_product">
+        <img src="img/ej_product.jpg" alt="">
+        <h2 class="titles">Gamer Chair</h2>
+      </div>
+      <div class="container_product">
+        <img src="img/ej_product.jpg" alt="">
+        <h2 class="titles">Gamer Chair</h2>
+      </div>
+      <div class="container_product">
+        <img src="img/ej_product.jpg" alt="">
+        <h2 class="titles">Gamer Chair</h2>
+      </div>
+      <div class="container_product">
+        <img src="img/ej_product.jpg" alt="">
+        <h2 class="titles">Gamer Chair</h2>
+      </div>
+      <div class="container_product">
+        <img src="img/ej_product.jpg" alt="">
+        <h2 class="titles">Gamer Chair</h2>
+      </div>
+      <div class="container_product">
+        <img src="img/ej_product.jpg" alt="">
+        <h2 class="titles">Gamer Chair</h2>
+      </div>
+      <div class="container_product">
+        <img src="img/ej_product.jpg" alt="">
+        <h2 class="titles">Gamer Chair</h2>
+      </div>
+      <div class="container_product">
+        <img src="img/ej_product.jpg" alt="">
+        <h2 class="titles">Gamer Chair</h2>
+      </div>
+      <div class="container_product">
+        <img src="img/ej_product.jpg" alt="">
+        <h2 class="titles">Gamer Chair</h2>
+      </div>
+      <div class="container_product">
+        <img src="img/ej_product.jpg" alt="">
+        <h2 class="titles">Gamer Chair</h2>
+      </div>
+    </div>
+    <img class="separator" src="img/separator.png" alt="">
+  </main> 
+  <footer>
+    <div class="container-icons">
+      <img src="" alt="">
+      <img src="" alt="">
+      <img src="" alt="">
+    </div>
+  </footer>
+</body>
+
 </html>
