se agregan styles a footer  y agregan algunas propiedades en html

--- a/index.html
+++ b/index.html
@@ -92,12 +92,18 @@
       </div>
     </div>
     <img class="separator" src="img/separator.png" alt="">
-  </main> 
+  </main>
   <footer>
     <div class="container-icons">
-      <img src="" alt="">
-      <img src="" alt="">
-      <img src="" alt="">
+      <a href="">
+        <img src="img/icon_whatsapp.png" alt="">
+      </a>
+      <a href="">
+        <img src="img/icon_facebook.png" alt="">
+      </a>
+      <a href="">
+        <img src="img/icon_instagram.png" alt="">
+      </a>
     </div>
   </footer>
 </body>
