--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <header>
     <img class="logo" src="img/logo.png" alt="" />
     <div class="navbar">
-      <div class="menu-hamburguer">
+      <div class="menu-hamburguer" onclick="toggleMenu()">
         <span></span>
         <span></span>
         <span></span>
@@ -107,5 +107,5 @@
     </div>
   </footer>
 </body>
-
+ <script src="app.js"></script>
 </html>
