Modification for the archive app_js and also an modification to the html from menu hamburguer

--- a/index.html
+++ b/index.html
@@ -14,10 +14,17 @@
   <header>
     <img class="logo" src="img/logo.png" alt="" />
     <div class="navbar">
-      <div class="menu-hamburguer" onclick="toggleMenu()">
+      <div class="menu-hamburguer">
         <span></span>
         <span></span>
         <span></span>
+      </div>
+      <div class="overlay" id="overlay">
+        <div class="menu">
+          <a href="#" onclick="changePage('home')">Home</a>
+          <a href="#" onclick="changePage('categories')">Categories</a>
+          <a href="#" onclick="changePage('contact')">Contact</a>
+        </div>
       </div>
       <div class="container_input">
         <img class="icon_lupa" src="img/icon_lupa.png" alt="image-lupa">
