se agrega la funcionalidad del modal

--- a/index.html
+++ b/index.html
@@ -51,6 +51,13 @@
     <div class="container-cards">
       
     </div>
+    <div class="modal">
+      <button class="close">X</button>
+      <h2 class="title">MODAL</h2>
+      <img class="image" src=" " alt="">
+      <p class="description"></p>
+      <h3 class="price"></h3>
+    </div>
     <img class="separator" src="img/separator.png" alt="">
   </main>
   <footer>
