se agrega styles

--- a/index.html
+++ b/index.html
@@ -39,14 +39,16 @@
     </div>
   </header>
   <main>
-    <img class="separator" src="img/separator.png" alt="">
-    <h1>Gaming Galaxy </h1>
-    <img class="separator" src="img/separator.png" alt="">
-    <div class="container-buttons">
-      <button>Electronics</button>
-      <button>Jewerely</button>
-      <button>Mens</button>
-      <button>Women</button>
+    <div class="container_category">
+      <img class="separator" src="img/separator.png" alt="">
+      <h1>Gaming Galaxy </h1>
+      <img class="separator" src="img/separator.png" alt="">
+      <div class="container-buttons">
+        <button>Electronics</button>
+        <button>Jewerely</button>
+        <button>Mens</button>
+        <button>Women</button>
+      </div>
     </div>
     <div class="container-cards">
       
