se agrega la funcionalidad Filtrar por categorias

--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
       <h1>Gaming Galaxy </h1>
       <img class="separator" src="img/separator.png" alt="">
       <div class="container-buttons">
-        <button>Electronics</button>
-        <button>Jewerely</button>
-        <button>Mens</button>
-        <button>Women</button>
+        <button class="Electronics">Electronics</button>
+        <button class="Jewerely">Jewerely</button>
+        <button class="Mens">Mens</button>
+        <button class="Women">Women</button>
       </div>
     </div>
     <div class="container-cards">
@@ -55,10 +55,11 @@
     </div>
     <div class="modal">
       <button class="close">X</button>
-      <h2 class="title">MODAL</h2>
+      <h2 class="title"></h2>
       <img class="image" src=" " alt="">
-      <p class="description"></p>
       <h3 class="price"></h3>
+      <p class="description"></p>
+      <button class="add_to_cart">Add to cart</button>
     </div>
     <img class="separator" src="img/separator.png" alt="">
   </main>
