New Function to the Footer and also new styles to the Footer From the CSS to stay static

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
   <header>
-    <img class="logo" src="img/logo.png" alt="" />
+    <img class="logo" src="img/logo.png" alt="" onclick="reloadWebsite()"/>
     <div class="navbar">
       <div class="menu-hamburguer">
         <span></span>
@@ -61,21 +61,21 @@
       <p class="description"></p>
       <button class="add_to_cart">Add to cart</button>
     </div>
-    <img class="separator" src="img/separator.png" alt="">
   </main>
-  <footer>
-    <div class="container-icons">
-      <a href="">
-        <img src="img/icon_whatsapp.png" alt="">
-      </a>
-      <a href="">
-        <img src="img/icon_facebook.png" alt="">
-      </a>
-      <a href="">
-        <img src="img/icon_instagram.png" alt="">
-      </a>
-    </div>
-  </footer>
+  <img class="separator2" src="img/separator.png" alt="">
+<footer>
+  <div class="container-icons">
+    <a href="#" id="stopMoving">
+      <img src="img/icon_whatsapp.png" alt="">
+    </a>
+    <a href="#">
+      <img src="img/icon_facebook.png" alt="">
+    </a>
+    <a href="#">
+      <img src="img/icon_instagram.png" alt="">
+    </a>
+  </div>
+</footer>
 </body>
  <script src="app.js"></script>
 </html>
