se inicia la funcionalidal de carrito de compras

--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style_modal.css">
+  <script src="
+  https://cdn.jsdelivr.net/npm/sweetalert2@11.10.7/dist/sweetalert2.all.min.js
+  "></script>
+  <link href="
+  https://cdn.jsdelivr.net/npm/sweetalert2@11.10.7/dist/sweetalert2.min.css
+  " rel="stylesheet">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap" rel="stylesheet">
   <title>Gaming Galaxy</title>
@@ -57,6 +64,7 @@
       <button class="close">X</button>
       <h2 class="title"></h2>
       <img class="image" src=" " alt="">
+      <h3 class="category"></h3>
       <h3 class="price"></h3>
       <p class="description"></p>
       <button class="add_to_cart">Add to cart</button>
