se agregan stylos al carrito de compras

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
   <body>
     <header>
-      <img class="logo" src="img/logo.png" alt="" onclick="reloadWebsite()" />
+      <img class="logo" src="img/logo.png" alt="" />
       <div class="navbar">
         <div class="menu-hamburguer">
           <span></span>
