funcionalidad  shopping cart

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <a href="">
           <img class="icon_user" src="img/icon_user.png" alt="image-login" />
         </a>
-        <a href="">
+        <a href="template/cart/cart.html">
           <img
             class="icon_shopping_cart"
             src="img/icon_shopping_cart.png"
